<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.eafit.solver.app.Main2Activity" >

    <android.widget.RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Spinner
            android:id="@+id/spinnerMethods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/layoutFirst"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/spinnerMethods"
            android:visibility="invisible" >

            <Spinner
                android:id="@+id/spinnerSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoMatrix"
                android:layout_below="@+id/spinnerSize"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/txtMatriz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/txtDescription"
                android:layout_marginLeft="15sp"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/txtRows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/txtMatriz"
                android:layout_marginTop="7sp"
                android:text=""
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/layoutSJ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="48sp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_infoSJ" />

                <EditText
                    android:id="@+id/etXi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:inputType="numberDecimal|numberSigned" />

                <TableLayout
                    android:id="@+id/TableJS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:visibility="visible" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center" >

                        <TextView
                            android:id="@+id/textView3"
                            android:text="@string/tv_tole" />

                        <EditText
                            android:id="@+id/etTol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="numberDecimal|numberSigned" />

                        <TextView
                            android:id="@+id/textView4"
                            android:text="@string/tv_iterations" />

                        <EditText
                            android:id="@+id/etIter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:id="@+id/textView5"
                            android:text="@string/tv_lambda" />

                        <EditText
                            android:id="@+id/etLambda"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layoutSecond"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/spinnerMethods">
            
            <TextView
                android:id="@+id/txtDescription2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info2"
                android:textSize="15sp" />
            
            <EditText
                android:id="@+id/txtX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/txtDescription2"
                android:ems="10"
                android:inputType="numberDecimal|numberSigned" />
            <TextView
                android:id="@+id/tvInfo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtX"
                android:text="@string/info3"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvFxn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvInfo3"
                android:layout_marginRight="79dp"
                android:text="@string/tv_Fxn"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/txtXn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtFxn"
                android:layout_alignBottom="@+id/txtFxn"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:ems="5"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/txtFxn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvFxn"
                android:layout_marginRight="20dp"
                android:ems="5"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/tvXn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvInfo3"
                android:layout_marginLeft="70dp"
                android:text="@string/tv_Xn"
                android:textSize="15sp" />
            
        </RelativeLayout>

        <Button
            android:id="@+id/btnSolve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#0066FF"
            android:text="@string/btnsolves"
            android:textColor="#ffffff" />
    </android.widget.RelativeLayout>

</FrameLayout>